Updates to documentation - remove mentions to Spark 1.6 - ensure that master documentation refers to latest Sparkling Water(SNAPSHOT) Only README which is not part of the sphinx should be used as dispatch for other versions. - fix versions across the docs to point to latest sparkling water